Closed Bug 803556 Opened 12 years ago Closed 12 years ago

incorrect rendering of context menu after correcting a spelling

Categories

(Core :: Layout, defect)

19 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla19
Tracking Status
firefox19 + verified

People

(Reporter: mayankleoboy1, Assigned: mattwoodrow)

References

()

Details

(Keywords: regression)

Attachments

(5 files)

Attached image bug.png
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0
Build ID: 20121019030551

Steps to reproduce:

1.Write a wrong word in a text field.
2. Right click and choose any correct alternative.
3. Right click again on the word.

I have HWA disabled.



Actual results:

Context menu is not rendered correctly. Attaching the screenshot and about:config


Expected results:

Correct rendering
Attached file about support.txt
WFM. Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121019030551

about:buildconfig
Build Machine

w64-ix-slave98
Source

Built from http://hg.mozilla.org/mozilla-central/rev/0ff60bfb3442
Build platform
target
i686-pc-mingw32
Build tools
Compiler 	Version 	Compiler flags
e:/builds/moz2_slave/m-cen-w32-ntly/build/obj-firefox/_virtualenv/Scripts/python.exe -O e:/builds/moz2_slave/m-cen-w32-ntly/build/build/cl.py cl 	16.00.30319.01 	-TC -nologo -W3 -Gy -Fdgenerated.pdb -we4553 -DNDEBUG -DTRIMMED -Zi -UDEBUG -DNDEBUG -GL -wd4624 -wd4952 -O1 -Oy-
e:/builds/moz2_slave/m-cen-w32-ntly/build/obj-firefox/_virtualenv/Scripts/python.exe -O e:/builds/moz2_slave/m-cen-w32-ntly/build/build/cl.py cl 	16.00.30319.01 	-TP -nologo -W3 -Gy -Fdgenerated.pdb -wd4345 -wd4351 -wd4800 -we4553 -GR- -DNDEBUG -DTRIMMED -Zi -UDEBUG -DNDEBUG -GL -wd4624 -wd4952 -O1 -Oy-
Configure arguments

--enable-update-channel=nightly --enable-update-packaging --enable-jemalloc --enable-signmar --enable-profiling --enable-js-diagnostics

Reporter, please try to enable HWA.

Also please try in Safe Mode (https://support.mozilla.org/en-US/kb/troubleshoot-firefox-issues-using-safe-mode)
1. Reproducible with HWA enabled.
2. Reproducible in safe mode.
Perhaps is a problem with English dictionary. Or only ATI graphic card.
Please try to install an English dictionary. You have Firefox in English interface?
English dict is already installed in nightly.
I have FF in english interface. 

I get this bug with HWA on and off. So,  IMO its not a ATI GPU bug.
Only in bugzilla appear this bug? Please try in new email gmail window, for example.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Reproducible in gmail and yahoomail.
I confirmed this bug. Also , for me this bug not appear (romanian build).

Gaphics:

Accelerare GPU Windows 1/1 
Direct3D 10
Dată driver 10-2-2012
Dată driver (GPU #2)3-19-2012
Descriere adaptor (GPU #2)Intel(R) HD Graphics 3000
Descrierea adaptoruluiNVIDIA GeForce GTX 560 Ti  
Direct2D activat true
DirectWrite activat true (6.1.7601.17789)
Drivere pentru adaptor nvd3dumx,nvwgf2umx,nvwgf2umx nvd3dum,nvwgf2um,nvwgf2um
GPU #2 activ false
ID dispozitiv 0x1200
ID dispozitiv (GPU #2)0x0112
ID furnizor 0x10de
ID vânzător (GPU #2)0x8086
Motor de afișare WebGL no information
RAM adaptor (GPU #2)Unknown
RAM pentru adaptor 2047
Versiune driver9.18.13.697
Versiune driver (GPU #2) 8.15.10.2696
AzureCanvasBackenddirect 2d
AzureContentBackenddirect 2d
AzureFallbackCanvasBackend cairo

NVidia driver: 306.97
Bad news: I confirmed now this bug for me in SAFE MODE. Please see photos attached.
Also in normal profile with add-ons enabled this bug not confirmed. Curious.


My add-ons:
about:me 0.5
Adblock Plus 2.1.2
Add-on Compatibility Reporter 1.1
Adobe Acrobat - Create PDF 1.2
Adobe Acrobat 10.1.4.38
Adobe Acrobat 11.0.0.379
ANIMATED - Snowflake Village 1320945460 [DISABLED]
British English Dictionary 1.19.1
Bugzilla Tweaks 1.12.1
Cheevos 1.4
Collusion 0.16.3 [DISABLED]
Dicționar românesc de corectare ortografică. 1.12
Download Statusbar 0.9.10
fireblur 1260925626 [DISABLED]
Google Earth Plugin 6.2.0.5788
Google Shortcuts 2.1.7.1
Google Update 1.3.21.123
HP Smart Web Printing 4.5 [DISABLED]
Implicit 19.0a1
Java Deployment Toolkit 7.0.70.11 10.7.2.11
Java(TM) Platform SE 7 U7 10.7.2.11
Microsoft Office 2010 14.0.4730.1010
Microsoft Office 2010 14.0.4761.1000
Mozilla QA Companion 1.2.3
Mozilla Reps Companion 1.1
MozMill 1.5.19
Mozmill Crowd 0.1.5
Nightly Tester Tools 3.3
NoScript 2.5.8
NVIDIA 3D Vision 7.17.13.697
NVIDIA 3D VISION 7.17.13.697
Puppy Dogs... 1291695684 [DISABLED]
Sage 1.4.12
Shockwave Flash 11.4.402.287
Silverlight Plug-In 5.1.10411.0
Submit Word 1.1.0
Test Pilot 1.2.2
VLC Web Plugin 2.0.2.0
Yahoo Application State Plugin 1.0.0.7
Attached image rigth click over word
Component: Untriaged → Menus
The rendering becomes normal if the user moves his mouse over the context menu.
Steps to reproduce:
1. Open URL
2. Type "thisis" (without Quotation marks) and ENTER
3. Right mouse click on the word
4. Choose "this" in contextmenu to correct spell
5. Right mouse click again


Regression window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/cf530228ac19
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121017104214
Bad:
http://hg.mozilla.org/mozilla-central/rev/a76c1f4c4112
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121017110913
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=cf530228ac19&tochange=a76c1f4c4112

Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/5013505b3930
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121016135204
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/000af356f525
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121016143205
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=5013505b3930&tochange=000af356f525
Component: Menus → Layout
Product: Firefox → Core
Assignee: nobody → matt.woodrow
When we reflow, we start from the main window display root and call SchedulePaint from there. This marks the window as needing a full paint, but not the popup display root as needing one.

Since we no longer invalidate wildy in nsSprocketFrame, nothing else was invalidating within the popup, and we never managed to avoid an empty transaction.

This patch makes sure we schedule a proper paint whenever we reflow a popup display root.

It would be nice if reflow happened separately for popups, there's no actual need to be doing a full paint for the main window.
Attachment #674107 - Flags: review?(roc)
https://hg.mozilla.org/mozilla-central/rev/c0c98a831804
Status: NEW → RESOLVED
Closed: 12 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Verified as fixed this on Firefox 19 beta 5 (Windows 7x64, Ubuntu 12.10 and Mac OS X 10.8).

If someone is able to reproduce, please reopen it.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: