Bug 803556 - Schedule a paint whenever we reflow a display root frame. r=roc